--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "express": "^4.16.3",
     "mongojs": "^3.1.0",
     "mongoose": "^5.3.16",
+    "mongoose-data-seed": "^2.1.6",
     "morgan": "^1.9.1"
   }
 }
